name:                argand
version:             0.1.0.0
synopsis:            Implementation of the typesetting language IDEAL
description:
    Argand is a variant of IDEAL, Christopher J. Van Wyk's
    graphics typesetting language.
homepage:            https://github.com/ALPHA-60/argand
license:             PublicDomain
-- license-file:        LICENSE
author:              Bojan Petrović, David Kaloper
maintainer:          bojan_petrovic@fastmail.fm, david@laze.rs
-- copyright:           
category:            Language, Text, Graphics

-- build-type:          Simple
build-type:          Custom
cabal-version:       >=1.8


executable argand
  main-is:             Argand.hs
  Hs-source-dirs:      src
  
  other-modules:       Lexer, Parser
  
  extensions:          BangPatterns

  build-depends:       base ==4.5.*, containers ==0.4.*, filepath ==1.3.*,
                       array >= 0.4.0.0,
                       monads-fd == 0.1.*
  
  build-tools:         alex == 2.*, happy

