name:                argand
version:             0.1.0.0
synopsis:            Implementation of the typesetting language IDEAL
description:
    Argand is a variant of IDEAL, Christopher J. Van Wyk's
    graphics typesetting language.
homepage:            https://github.com/ALPHA-60/argand
license:             PublicDomain
-- license-file:        LICENSE
author:              Bojan Petrović, David Kaloper
maintainer:          bojan_petrovic@fastmail.fm, david@laze.rs
-- copyright:           
category:            Language, Text, Graphics

-- build-type:          Simple
build-type:          Custom
cabal-version:       >=1.16


executable argand
  main-is:             Argand.hs
  Hs-source-dirs:      src
  
  other-modules:       Lexer, Parser
  
  extensions:          BangPatterns

  build-depends:       base ==4.6.0.1, array >= 0.4.0.0, filepath ==1.3.*, mtl == 2.1.*, containers==0.5.*, either ==4.*

  
  build-tools:         alex == 3.*, happy

